# DRYAD_backend

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.production.template  .gitignore  CHANGELOG_EXTERNAL_SERVICES.md  DEEP_DIRECTORY_ANALYSIS.md  DR  Dockerfile  Dockerfile.production  ENHANCED_INSTALLATION_PLAN.md  EXTERNAL_SERVICES_SUPPORT.md  INSTALLATION_FILES_README.md  INSTALLATION_IMPROVEMENTS.md  INSTALLATION_OPTIONS.md  INSTALLER_COMPARISON.md  INSTALL_ON_REMOTE_SERVER.md  PROMETHEUS_PHASE_1_INCOMPLETE_TASKS.md  QUICK_REFERENCE.md  QUICK_START_SERVER.md  README.md  README_INSTALLER.md  START_HERE.md  TROUBLESHOOTING.md  cleanup_remote.sh  cleanup_remote_files.sh  create_level3_tables.py  create_level4_tables.py  deploy_to_server.sh  diagnose_install.sh  docker-compose.production.yml  docker-compose.university.yml  dryad.service  fix_docker_path.sh  fix_madhatter.sh  fix_madhatter_install.sh  force_move_containerd.sh  install_dryad_server.sh  pyproject.toml  (+13 more)
AI_TASK_TEMPLATES/: LEVEL_0_MEMORY_DATABASE.md  LEVEL_0_STRUCTURED_LOGGING.md  LEVEL_0_TOOL_REGISTRY.md  README.md
UniAugment/: .gitignore  00_START_HERE.md  6_MACHINE_SETUP_PLAN.md  DISTRIBUTED_FINAL_SUMMARY.txt  DISTRIBUTED_QUICK_REFERENCE.md  DISTRIBUTED_SETUP_GUIDE_6MACHINE.md  FINAL_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_6MACHINE.md  README.md  STACK_OVERVIEW.md  VERIFICATION_AND_TESTING_6MACHINE.md  VERIFICATION_INDEX.md  VERIFICATION_SUMMARY.txt
alembic/: env.py
app/: __init__.py
archive/: install_dryad_enhanced_BROKEN.sh
(+1127 files in other folders)
